# seekable-zstd

./: .gitignore  .yamllint  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASE_CHECKLIST.md  ruff.toml
.cargo/: config.toml
.github/workflows/: artifacts.yml  ci.yml  go-prebuilt-libs.yml  release.yml
.goneat/: assess.yaml  hooks.yaml  tools.yaml
.plans/: bootstrap-seekable-zstd.md
.plans/active/: BOOTSTRAP.md  cross-build-plan.md
bindings/go/: cgo_darwin_amd64.go  cgo_darwin_arm64.go  cgo_linux_amd64.go  cgo_linux_amd64_musl.go  cgo_linux_arm64.go  cgo_linux_arm64_musl.go  cgo_windows_amd64.go  go.mod  seekable.go  seekable_test.go
bindings/go/include/: seekable_zstd.h
bindings/nodejs/: Cargo.toml  biome.json  index.d.ts  index.js  package-lock.json  package.json
bindings/nodejs/__tests__/: reader.test.js
bindings/nodejs/src/: lib.rs
crates/seekable-zstd/: Cargo.toml
crates/seekable-zstd-core/: Cargo.toml  build.rs  cbindgen.toml
crates/seekable-zstd-core/src/: decoder.rs  encoder.rs  error.rs  ffi.rs  lib.rs  parallel.rs
crates/seekable-zstd-py/: Cargo.toml  pyproject.toml
crates/seekable-zstd-py/python/seekable_zstd/: __init__.py  seekable_zstd.pyi
crates/seekable-zstd-py/src/: lib.rs
crates/seekable-zstd-py/tests/: test_reader.py
crates/seekable-zstd/src/: lib.rs
docs/: cicd.md  development.md  go-binding.md  release-signing.md  typescript-binding.md  versioning.md
docs/releases/: README.md  v0.1.1.md
docs/standards/: README.md  attribution.md  github-actions.md  testing.md
docs/standards/coding/: README.md  go.md  python.md  rust.md  typescript.md
scripts/: bootstrap-tools.sh
tests/fixtures/: hello.szst
