[package]
name = "seekable-zstd-node"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi4", "tokio_rt"] }
napi-derive = "2"
seekable-zstd-core = { path = "../../crates/seekable-zstd-core" }

[build-dependencies]
napi-build = "2"
