[package]
name = "seekable-zstd-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
zeekstd = "0.3"
rayon = "1.10"
thiserror = "2.0"
zstd-safe = "7"  # Needed for some FFI types maybe, or implicitly used.

[build-dependencies]
cbindgen = "0.29"
